# PriceStudy

./: .gitignore  README.md  pyproject.toml  rf_ec2_price.pmml
data/: ec2_prices.csv
model/: rf_ec2_price.pmml
output/: data.csv
pricestudy/: __main__.py  cpu_memory_storage.py  gpu.py  pricestudy.py
