[tool.poetry]
name = "pricestudy"
version = "0.1.0"
description = ""
authors = ["Marlon Etheredge <marlon.etheredge@uibk.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
scipy = "^1.15.1"
statsmodels = "^0.14.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pyqt6 = "^6.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
